--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,5 +38,6 @@ subjects:
 - !lcsh 'Adventure stories'
 - !lcsh 'Mystery fiction'
 - !lcsh 'Women detectives -- Juvenile fiction'
+- GITenberg
 title: Ghost Beyond the Gate
 url: http://www.gutenberg.org/ebooks/34395
